# minitrace-c

./: CMakeLists.txt  Cargo.toml
examples/: CMakeLists.txt
include/: minitrace_c.h
src/: lib.rs  minitrace_c.cpp
